--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: Renaud42
-custom: [https://www.paypal.me/RenaudDoxixx,https://www.omgserv.com/en/donate/Fire-Softwares/]
+custom: ["https://www.paypal.me/RenaudDoxixx","https://www.omgserv.com/en/donate/Fire-Softwares/"]
